--- a/app/assets/stylesheets/widgets/news-events-feed.scss
+++ b/app/assets/stylesheets/widgets/news-events-feed.scss
@@ -1,4 +1,4 @@
-/* 
+/*
  * These styles apply to the news-events-widget which can now be present
  * in the primary content of a cascade page, or in the left column under
  * the site navigation.
@@ -77,7 +77,7 @@ $tab-content-border-color: #c1c1c1;
   background-color: #cfcfcf;
   color: #383838;
   font-size: 1.1em;
-  padding: 0 17px 0 17px;
+  padding: 0 13px;
   line-height: 35px;
   height: 35px;
   cursor: pointer;
@@ -107,6 +107,7 @@ $tab-content-border-color: #c1c1c1;
     color: $link-color;
   }
   &.active { // The selected tab
+    padding: 0 15px;
     background-color: $tab-content-bg-color;
     font-weight: 600;
     color: $primary-color;
@@ -135,7 +136,7 @@ $tab-content-border-color: #c1c1c1;
   //color: $text-color;
   color: #383838;
   clear: both;
-  padding: 20px;
+  padding: 15px;
   div { margin: 0; }
   > li { display: none; }
   > li.active {
