--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
@@ -190,6 +190,7 @@
     position: relative;
     padding: 24px 32px;
     z-index: 667;
+    background-position: 0% 50%;
 
     @include media($medium-screen) {
       @include span-columns(9);
