Shrinks background image on mobile rather than crop

--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
@@ -190,7 +190,7 @@
     position: relative;
     padding: 24px 32px;
     z-index: 667;
-    background-position: 0% 50%;
+    background-size: cover;
 
     @include media($medium-screen) {
       @include span-columns(9);
