--- a/app/assets/stylesheets/widgets/_ad_landing_page/messaging.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/messaging.scss
@@ -50,6 +50,10 @@
   }
 }
 
+.section-message .body ul {
+  margin-left: 20px;
+}
+
 .section-message .body li {
   font-size: 16px;
   line-height: 24px;
