--- a/app/views/widgets/shared/_footer.html
+++ b/app/views/widgets/shared/_footer.html
@@ -42,14 +42,14 @@
         <div class="link-container">
           <div class="links-header"><h3>Social</h3></div>
           <ul class="link-list social-icon-list">
-            <li><a class="icon icon-twitter" href="http://twitter.com/#!/chapmanu" target="_blank"></a></li>
-            <li><a class="icon icon-facebook" href="http://www.facebook.com/ChapmanUniversity" target="_blank"></a></li>
-            <li><a class="icon icon-pinterest" href="http://pinterest.com/chapmanu/" target="_blank"></a></li>
-            <li><a class="icon icon-graduation" href="http://itunes.apple.com/us/institution/chapman-university/id430678922" target="_blank"></a></li>
-            <li><a class="icon icon-youtube" href="http://www.youtube.com/user/ChapmanUniversity" target="_blank"></a></li>
-            <li><a class="icon icon-linkedin2" href="http://www.linkedin.com/company/10701?trk=tyah" target="_blank"></a></li>
-            <li><a class="icon icon-google-plus" href="https://plus.google.com/112412382370481463024/posts" target="_blank"></a></li>
-            <li><a class="icon icon-instagram" href="http://www.instagram.com/chapmanu" target="_blank"></a></li>
+            <li><a class="icon icon-twitter hide-text" href="http://twitter.com/#!/chapmanu" target="_blank">Twitter</a></li>
+            <li><a class="icon icon-facebook hide-text" href="http://www.facebook.com/ChapmanUniversity" target="_blank">Facebook</a></li>
+            <li><a class="icon icon-pinterest hide-text" href="http://pinterest.com/chapmanu/" target="_blank">Pinterest</a></li>
+            <li><a class="icon icon-graduation hide-text" href="http://itunes.apple.com/us/institution/chapman-university/id430678922" target="_blank">iTunes</a></li>
+            <li><a class="icon icon-youtube hide-text" href="http://www.youtube.com/user/ChapmanUniversity" target="_blank">YouTube</a></li>
+            <li><a class="icon icon-linkedin2 hide-text" href="http://www.linkedin.com/company/10701?trk=tyah" target="_blank">Linked In</a></li>
+            <li><a class="icon icon-google-plus hide-text" href="https://plus.google.com/112412382370481463024/posts" target="_blank">Google+</a></li>
+            <li><a class="icon icon-instagram hide-text" href="http://www.instagram.com/chapmanu" target="_blank">Instagram</a></li>
           </ul>
         </div>
       </div>
