fix link urls in footer
chg Title IX, Feedback Form and Emergency Info links

--- a/app/views/widgets/shared/_footer.html
+++ b/app/views/widgets/shared/_footer.html
@@ -33,9 +33,9 @@
           <ul class="link-list">
             <li><a href="../../academics/libraries/index.aspx">Libraries</a></li>
             <li><a href="../../students/health-and-safety/disability-services/index.aspx">Disability Services</a></li>
-            <li><a href="../../students/health-and-safety/title-ix.aspx">Title IX</a></li>
-            <li><a href="../../campus-services/public-safety/emergency.aspx">Emergency Information</a></li>
-            <li><a href="../../feedback-form.aspx">Feedback</a></li>
+            <li><a href="../../students/health-and-safety/title-ix/index.aspx">Title IX</a></li>
+            <li><a href="../../emergency/alert.aspx">Emergency Information</a></li>
+            <li><a href="../../website-feedback-form.aspx">Feedback</a></li>
           </ul>
         </div>
         <!-- SOCIAL -->
