--- a/app/views/widgets/shared/_footer.html
+++ b/app/views/widgets/shared/_footer.html
@@ -16,7 +16,7 @@
         </div>
         <!-- RESOURCES -->
         <div class="link-container">
-          <div class="links-header"><h3>Resources</h3></div>
+          <div class="links-header"><h2>Resources</h2></div>
           <ul class="link-list">
             <li><a href="../../a-z/index.aspx">A-Z Listing</a></li>
             <li><a href="../../faculty-staff/human-resources/jobs/index.aspx">Employment</a></li>
@@ -29,7 +29,7 @@
       <div class="menu-section">
         <!-- SERVICES -->
         <div class="link-container">
-          <div class="links-header"><h3>Services</h3></div>
+          <div class="links-header"><h2>Services</h2></div>
           <ul class="link-list">
             <li><a href="../../academics/libraries/index.aspx">Libraries</a></li>
             <li><a href="../../students/health-and-safety/disability-services/index.aspx">Disability Services</a></li>
@@ -40,7 +40,7 @@
         </div>
         <!-- SOCIAL -->
         <div class="link-container">
-          <div class="links-header"><h3>Social</h3></div>
+          <div class="links-header"><h2>Social</h2></div>
           <ul class="link-list social-icon-list">
             <li><a class="icon icon-twitter hide-text" href="http://twitter.com/#!/chapmanu" target="_blank">Twitter</a></li>
             <li><a class="icon icon-facebook hide-text" href="http://www.facebook.com/ChapmanUniversity" target="_blank">Facebook</a></li>
@@ -84,7 +84,7 @@
           <span itemprop="postalCode">92618</span>
         </p>
       </div>
-      <p class="copyright">&copy; 2017 Chapman University</p>
+      <p class="copyright">&copy; <span style="copyrightYear">2015</span> Chapman University</p>
     </div>
   </div>
 </footer>
