chg links-header from h3 to h2; fix copyrightYear class

--- a/app/views/widgets/shared/_footer.html
+++ b/app/views/widgets/shared/_footer.html
@@ -84,7 +84,7 @@
           <span itemprop="postalCode">92618</span>
         </p>
       </div>
-      <p class="copyright">&copy; <span style="copyrightYear">2015</span> Chapman University</p>
+      <p class="copyright">&copy; <span class="copyrightYear">2015</span> Chapman University</p>
     </div>
   </div>
 </footer>
