--- a/app/views/widgets/shared/_footer.html
+++ b/app/views/widgets/shared/_footer.html
@@ -9,20 +9,20 @@
           <ul class="link-list">
             <li><a href="http://blogs.chapman.edu/happenings/">News</a></li>
             <li><a href="http://blogs.chapman.edu/press-room/">Press Room</a></li>
-            <li><a href="../../events/index.aspx">Events</a></li>
-            <li><a href="../../directory/index.aspx">Directory</a></li>
-            <li><a href="../../about/visit-chapman/index.aspx">Campus Visit</a></li>
+            <li><a href="/events/index">Events</a></li>
+            <li><a href="/directory/index">Directory</a></li>
+            <li><a href="/about/visit-chapman/index">Campus Visit</a></li>
           </ul>
         </div>
         <!-- RESOURCES -->
         <div class="link-container">
           <div class="links-header"><h2>Resources</h2></div>
           <ul class="link-list">
-            <li><a href="../../a-z/index.aspx">A-Z Listing</a></li>
-            <li><a href="../../faculty-staff/human-resources/jobs/index.aspx">Employment</a></li>
-            <li><a href="../../about/maps-directions/index.aspx">Maps and Directions</a></li>
-            <li><a href="../../students/tuition-and-aid/index.aspx">Tuition and Aid</a></li>
-            <li><a href="../../campus-services/information-systems/security/privacy-policy.aspx">Privacy</a></li>
+            <li><a href="/a-z/index">A-Z Listing</a></li>
+            <li><a href="/faculty-staff/human-resources/jobs/index">Employment</a></li>
+            <li><a href="/about/maps-directions/index">Maps and Directions</a></li>
+            <li><a href="/students/tuition-and-aid/index">Tuition and Aid</a></li>
+            <li><a href="/campus-services/information-systems/security/privacy-policy">Privacy</a></li>
           </ul>
         </div>
       </div>
@@ -31,25 +31,25 @@
         <div class="link-container">
           <div class="links-header"><h2>Services</h2></div>
           <ul class="link-list">
-            <li><a href="../../academics/libraries/index.aspx">Libraries</a></li>
-            <li><a href="../../students/health-and-safety/disability-services/index.aspx">Disability Services</a></li>
-            <li><a href="../../students/health-and-safety/title-ix/index.aspx">Title IX</a></li>
-            <li><a href="../../emergency/alert.aspx">Emergency Information</a></li>
-            <li><a href="../../website-feedback-form.aspx">Feedback</a></li>
+            <li><a href="/academics/libraries/index">Libraries</a></li>
+            <li><a href="/students/health-and-safety/disability-services/index">Disability Services</a></li>
+            <li><a href="/students/health-and-safety/title-ix/index">Title IX</a></li>
+            <li><a href="/emergency/alert">Emergency Information</a></li>
+            <li><a href="/website-feedback-form">Feedback</a></li>
           </ul>
         </div>
         <!-- SOCIAL -->
         <div class="link-container">
           <div class="links-header"><h2>Social</h2></div>
           <ul class="link-list social-icon-list">
-            <li><a class="icon icon-twitter" href="http://twitter.com/#!/chapmanu" target="_blank"><span class="hide-text">Twitter</span></a></li>
-            <li><a class="icon icon-facebook" href="http://www.facebook.com/ChapmanUniversity" target="_blank"><span class="hide-text">Facebook</span></a></li>
-            <li><a class="icon icon-pinterest" href="http://pinterest.com/chapmanu/" target="_blank"><span class="hide-text">Pinterest</span></a></li>
-            <li><a class="icon icon-graduation" href="http://itunes.apple.com/us/institution/chapman-university/id430678922" target="_blank"><span class="hide-text">iTunes</span></a></li>
-            <li><a class="icon icon-youtube" href="http://www.youtube.com/user/ChapmanUniversity" target="_blank"><span class="hide-text">YouTube</span></a></li>
-            <li><a class="icon icon-linkedin2" href="http://www.linkedin.com/company/10701?trk=tyah" target="_blank"><span class="hide-text">Linked In</span></a></li>
-            <li><a class="icon icon-google-plus" href="https://plus.google.com/112412382370481463024/posts" target="_blank"><span class="hide-text">Google+</span></a></li>
-            <li><a class="icon icon-instagram" href="http://www.instagram.com/chapmanu" target="_blank"><span class="hide-text">Instagram</span></a></li>
+            <li><a class="icon icon-twitter" href="http://twitter.com/#!/chapmanu" target="_blank" title="Twitter"><span class="sr-only">Twitter</span></a></li>
+            <li><a class="icon icon-facebook" href="http://www.facebook.com/ChapmanUniversity" target="_blank"><span class="sr-only"Facebook">Facebook</span></a></li>
+            <li><a class="icon icon-pinterest" href="http://pinterest.com/chapmanu/" target="_blank"><span class="sr-only">Pinterest</span></a></li>
+            <li><a class="icon icon-graduation" href="http://itunes.apple.com/us/institution/chapman-university/id430678922" target="_blank"><span class="sr-only">iTunes</span></a></li>
+            <li><a class="icon icon-youtube" href="http://www.youtube.com/user/ChapmanUniversity" target="_blank"><span class="sr-only">youTube</span></a></li>
+            <li><a class="icon icon-linkedin2" href="http://www.linkedin.com/company/10701?trk=tyah" target="_blank"><span class="sr-only">LinkedIn</span></a></li>
+            <li><a class="icon icon-google-plus" href="https://plus.google.com/112412382370481463024/posts" target="_blank"><span class="sr-only">Google Plus</span></a></li>
+            <li><a class="icon icon-instagram" href="http://www.instagram.com/chapmanu" target="_blank"><span class="sr-only">Instagram</span></a></li>
           </ul>
         </div>
       </div>
