have h2 and h3 setup for the social headers in global footer
for those pages with markup still using h3 and not h2, setup both

--- a/app/assets/stylesheets/layout_old/footer.scss
+++ b/app/assets/stylesheets/layout_old/footer.scss
@@ -204,7 +204,7 @@
       padding: 10px 16px;
       background-color: $black;
 
-      h2 {
+      h2, h3 {
         margin: 0;
         font-size: 18px;
         line-height: 1.4em;
