--- a/app/assets/stylesheets/layout_old/footer.scss
+++ b/app/assets/stylesheets/layout_old/footer.scss
@@ -185,6 +185,7 @@
             font-size: 24px;
             line-height: 42px;
             color: white;
+            //screen-readers only will see A text for social buttons
             .sr-only {
               position: absolute;
               width: 1px;
