fixes to links in footer

--- a/app/views/widgets/shared/_footer.html
+++ b/app/views/widgets/shared/_footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="inner-container">
-    <span class="link-container-before">&nbsp;</span>
+    <span class="link-container-before">&#160;</span>
     <div class="footer-menu footer-section">
       <div class="menu-section">
         <!-- CONNECT -->
@@ -9,7 +9,7 @@
           <ul class="link-list">
             <li><a href="http://blogs.chapman.edu/happenings/">News</a></li>
             <li><a href="http://blogs.chapman.edu/press-room/">Press Room</a></li>
-            <li><a href="/events/index">Events</a></li>
+            <li><a href="https://events.chapman.edu/">Events</a></li>
             <li><a href="/directory/index">Directory</a></li>
             <li><a href="/about/visit-chapman/index">Campus Visit</a></li>
           </ul>
@@ -19,10 +19,11 @@
           <div class="links-header"><h2>Resources</h2></div>
           <ul class="link-list">
             <li><a href="/a-z/index">A-Z Listing</a></li>
+            <li><a href="/consumer-information-disclosures/index">Consumer Disclosures</a></li>
             <li><a href="/faculty-staff/human-resources/jobs/index">Employment</a></li>
             <li><a href="/about/maps-directions/index">Maps and Directions</a></li>
             <li><a href="/students/tuition-and-aid/index">Tuition and Aid</a></li>
-            <li><a href="/campus-services/information-systems/security/privacy-policy">Privacy</a></li>
+            <li><a href="/campus-services/information-systems/policies-and-procedures/privacy-policy">Privacy</a></li>
           </ul>
         </div>
       </div>
@@ -54,7 +55,7 @@
         </div>
       </div>
     </div>
-    <span class="link-container-after">&nbsp;</span>
+    <span class="link-container-after">&#160;</span>
     <div class="footer-info footer-section">
       <div class="weather">
         <a class="weather-icon" href="http://forecast.chapman.edu/" target="_blank">
