changes to address spacing in footer

--- a/app/views/widgets/shared/_footer.html
+++ b/app/views/widgets/shared/_footer.html
@@ -68,18 +68,19 @@
       </div>
       <div class="address">
         <p class="addr-name">Main Campus</p>
-        <p itemprop="streetAddress">One University Drive</p>
         <p>
-          <span itemprop="addressLocality">Orange, </span>
-          <span itemprop="addressRegion">CA </span>
-          <span itemprop="postalCode">92866</span>
+          <span itemprop="streetAddress">One University Drive</span>
+          <br/><span itemprop="addressLocality">Orange, </span>
+              <span itemprop="addressRegion">CA </span>
+              <span itemprop="postalCode">92866</span>
         </p>
         <p itemprop="telephone">(714) 997-6815</p>
       </div>
       <div class="address">
         <p class="addr-name">Rinker Health Science Campus</p>
-        <p itemprop="streetAddress">9401 Jeronimo Road</p>
         <p>
+          <span itemprop="streetAddress">9401 Jeronimo Road</span>
+          <br/>
           <span itemprop="addressLocality">Irvine, </span>
           <span itemprop="addressRegion">CA </span>
           <span itemprop="postalCode">92618</span>
