fix typo on facebook social icon markup

--- a/app/views/widgets/shared/_footer.html
+++ b/app/views/widgets/shared/_footer.html
@@ -44,7 +44,7 @@
           <div class="links-header"><h2>Social</h2></div>
           <ul class="link-list social-icon-list">
             <li><a class="icon icon-twitter" href="http://twitter.com/#!/chapmanu" target="_blank"><span class="sr-only">Twitter</span></a></li>
-            <li><a class="icon icon-facebook" href="http://www.facebook.com/ChapmanUniversity" target="_blank"><span class="sr-only"Facebook">Facebook</span></a></li>
+            <li><a class="icon icon-facebook" href="http://www.facebook.com/ChapmanUniversity" target="_blank"><span class="sr-only">Facebook</span></a></li>
             <li><a class="icon icon-pinterest" href="http://pinterest.com/chapmanu/" target="_blank"><span class="sr-only">Pinterest</span></a></li>
             <li><a class="icon icon-graduation" href="http://itunes.apple.com/us/institution/chapman-university/id430678922" target="_blank"><span class="sr-only">iTunes</span></a></li>
             <li><a class="icon icon-youtube" href="http://www.youtube.com/user/ChapmanUniversity" target="_blank"><span class="sr-only">youTube</span></a></li>
