Reproduces issue #221: news feed error.

--- a/app/views/layouts/2_column.html.erb
+++ b/app/views/layouts/2_column.html.erb
@@ -41,12 +41,6 @@
 
                         <div class="middleRightContainer">
                             <div class="main"><h1><span class="bullet">»</span><%= yield(:title) %></h1>
-                                <div class="hidden">
-                                    <div class="featureFeed">/_featured/Default.xml</div>
-                                    <div class="newsFeed">Default</div>
-                                    <div class="eventsFeed">Default</div>
-                                    <div class="newsEventsOptions">$tabOptions</div>
-                                </div>
                                 <%= yield(:primary_content) %>
                             </div>
                         </div>
@@ -70,7 +64,7 @@
 
         <div class="hidden">
             <div class="featureFeed">/_featured/Default.xml</div>
-            <div class="newsFeed">Default</div>
+            <div class="newsFeed">Schmid</div>
             <div class="eventsFeed">Default</div>
             <div class="newsEventsOptions">$newsEventsOptions</div>
             <div class="leftColumnNewsEventsOptions">$leftColumnnewsEventsOptions</div>
