adds blue law ribbon color

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -4,6 +4,7 @@ $red:         #98002e;
 $black:       #2f2f2f;
 $warm-gray:   #edeade;
 $cool-gray:   #ecebe5;
+$law-blue-ribbon: #002f7c;
 
 /* Accent Colors
 ---------------------------------------- */
