changed rendering of footer for flexibility, removed hardcoded file path
in 1-, 2-, and 3-column layouts

--- a/app/views/1_column/landing_page.html.erb
+++ b/app/views/1_column/landing_page.html.erb
@@ -2,22 +2,25 @@
 <%= theme "default" %>
 
 <%= widgets <<-YAML
-    primary_content:
-      - single_column/messaging_1_column_image
-      - single_column/messaging_1_column_facts
-      - single_column/call_to_action_block
-      - single_column/chapman_events_feed
-      - single_column/chapman_social_feed
-      - single_column/chapman_stories_feed
-      - single_column/messaging_2_column_facts
-      - single_column/messaging_2_column
-      - single_column/messaging_2_column_youtube_video
-      - single_column/messaging_2_column_with_bg_image
-      - single_column/subscribe
-      - single_column/messaging_2_column_text_left
-      - single_column/messaging_1_column
-      - single_column/call_to_action_3_up
-      - single_column/cta_footer
-      - single_column/contact_footer
+  primary_content:
+    - single_column/messaging_1_column_image
+    - single_column/messaging_1_column_facts
+    - single_column/call_to_action_block
+    - single_column/chapman_events_feed
+    - single_column/chapman_social_feed
+    - single_column/chapman_stories_feed
+    - single_column/messaging_2_column_facts
+    - single_column/messaging_2_column
+    - single_column/messaging_2_column_youtube_video
+    - single_column/messaging_2_column_with_bg_image
+    - single_column/subscribe
+    - single_column/messaging_2_column_text_left
+    - single_column/messaging_1_column
+    - single_column/call_to_action_3_up
+    - single_column/cta_footer
+    - single_column/contact_footer
+
+  footer: shared/footer
+
   YAML
 %>
