--- a/app/views/layouts/1_column.html.erb
+++ b/app/views/layouts/1_column.html.erb
@@ -26,7 +26,7 @@
                     <%= yield(:primary_content) %>
                 </div>
             </div>
-            <%= render 'widgets/shared/footer' %>
+            <%= yield(:footer) %>
         </div>
 
         <div class="hidden">
