--- a/app/views/layouts/3_column.html.erb
+++ b/app/views/layouts/3_column.html.erb
@@ -54,7 +54,7 @@
             </div>
           </div>
         </div>
-        <%= render 'widgets/shared/footer' %>
+        <%= yield(:footer) %>
       </div>
       <div class="hidden">
         <div class="featureFeed">/_featured/Default.xml</div>
