--- a/app/views/1_column/hero_side_panel.html.erb
+++ b/app/views/1_column/hero_side_panel.html.erb
@@ -2,12 +2,15 @@
 <%= theme "business" %>
 
 <%= widgets <<-YAML
-    primary_content:
-      - hero/side_panel
-      - single_column/call_to_action_block
-      - single_column/chapman_events_feed
-      - single_column/messaging_1_column_facts
-      - single_column/messaging_2_column_youtube_video
-      - single_column/messaging_2_column_vimeo_video
+  primary_content:
+    - hero/side_panel
+    - single_column/call_to_action_block
+    - single_column/chapman_events_feed
+    - single_column/messaging_1_column_facts
+    - single_column/messaging_2_column_youtube_video
+    - single_column/messaging_2_column_vimeo_video
+
+  footer: shared/footer
+
   YAML
 %>
