--- a/app/views/layouts/2_column.html.erb
+++ b/app/views/layouts/2_column.html.erb
@@ -63,7 +63,7 @@
                 </div>
             </div>
 
-            <%= render 'widgets/shared/footer' %>
+            <%= yield(:footer) %>
 
         </div>
         <!--! end of #container -->
