add law primary and secondary color sass variables

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -112,6 +112,7 @@ $wilkinson-secondary: #209cc9;
 $wilkinson-tertiary: #007ba7;
 
 $law-primary: #002f7c;
+$law-secondary: #01235b;
 
 /* Our Base Spacing Unit: Use multiples of this variable */
 $base-spacing: 16px;
