updated old references to global footer

--- a/app/views/layouts/omninav.erb
+++ b/app/views/layouts/omninav.erb
@@ -135,7 +135,7 @@
         </tbody>
       </table>
 
-      <%= render 'widgets/shared/footer' %>
+      <%= render '_cascade/blocks/html/footer' %>
     </div>
   </div>
 </body>
