added footers to views

--- a/app/views/1_column/hero_side_panel.html.erb
+++ b/app/views/1_column/hero_side_panel.html.erb
@@ -10,7 +10,7 @@
     - single_column/messaging_2_column_youtube_video
     - single_column/messaging_2_column_vimeo_video
 
-  footer: shared/footer
-
   YAML
 %>
+
+<%= footer "default" %>
