--- a/app/views/1_column/landing_page.html.erb
+++ b/app/views/1_column/landing_page.html.erb
@@ -20,7 +20,7 @@
     - single_column/cta_footer
     - single_column/contact_footer
 
-  footer: shared/footer
-
   YAML
 %>
+
+<%= footer "default" %>
