--- a/app/views/1_column/law_theme.html.erb
+++ b/app/views/1_column/law_theme.html.erb
@@ -5,7 +5,7 @@
   primary_content:
     - single_column/messaging_2_column_video_dark_bg
 
-  footer: shared/law_footer
-
   YAML
 %>
+
+<%= footer "law" %>
