--- a/app/views/3_column/sample.html.erb
+++ b/app/views/3_column/sample.html.erb
@@ -40,7 +40,7 @@
     - right_column/simple_form
     - right_column/logo_image_rotator_1
 
-  footer: shared/footer
-
   YAML
 %>
+
+<%= footer "default" %>
