--- a/app/assets/stylesheets/layout_old/footer.scss
+++ b/app/assets/stylesheets/layout_old/footer.scss
@@ -154,13 +154,13 @@
       padding: 16px;
       list-style-type: none;
 
-      li { margin: 0; }
+      li {
+        line-height: 20px;
+      }
 
       a {
         margin: 0;
-        line-height: 24px;
         color: $black;
-
         &:hover { color: $red; }
       }
 
