--- a/app/views/_cascade/blocks/html/_law_footer.html
+++ b/app/views/_cascade/blocks/html/_law_footer.html
@@ -12,7 +12,7 @@
               <a href="https://blackboard.chapman.edu/" title="Blackboard">Blackboard</a>
             </li>
             <li>
-              <a href="/entity/open.act?type=page&amp;id=bfb0b918c04d744c6ab45b2981d655c9" target="_parent" title="Library">Library</a>
+              <a href="/law/student-resources/library/index" target="_parent" title="Library">Library</a>
             </li>
             <li>
               <a href="https://web.chapman.edu/OnlineSyllabus/public" title="Syllabi">Syllabi</a>
@@ -30,10 +30,10 @@
           <div class="links-header"><h2>Publications</h2></div>
           <ul class="link-list">
             <li>
-              <a href="/entity/open.act?type=page&amp;id=1824d272c04d744c421e6b1c5651f2dc" target="_parent" title="Faculty in the News">Faculty in the News</a>
+              <a href="/law/law-faculty/faculty-in-news" target="_parent" title="Faculty in the News">Faculty in the News</a>
             </li>
             <li>
-              <a href="/entity/open.act?type=page&amp;id=6b526bf3c04d744c026ec5a67d5223be" target="_parent" title="Student and Alumni Success Stories">Student and Alumni Success Stories</a>
+              <a href="/law/about/law-profiles/index" target="_parent" title="Student and Alumni Success Stories">Student and Alumni Success Stories</a>
             </li>
             <li>
               <a href="http://blogs.chapman.edu/law/" title="Law School News Blog">Law School News Blog</a>
@@ -42,10 +42,7 @@
               <a href="http://www.chapmanlawreview.com/" title="Chapman Law Review">Chapman Law Review</a>
             </li>
             <li>
-              <a href="http://www.lawschoolblog.org/" title="Chapman Nexus Journal">Chapman Nexus Journal</a>
-            </li>
-            <li>
-              <a href="/entity/open.act?type=page&amp;id=4c0c8d86c04d744c421e6b1ce56ba1eb" target="_parent" title="The Writ">The Writ</a>
+              <a href="/law/publications/diversity-social-justice/index">Diversity and Social Justice Forum</a>
             </li>
           </ul>
         </div>
@@ -56,19 +53,19 @@
           <div class="links-header"><h2>Resources</h2></div>
           <ul class="link-list">
             <li>
-              <a href="/entity/open.act?type=page&amp;id=b1947039c04d744c6ab45b29ebec6df5" target="_parent" title="Legal Clinics">Legal Clinics</a>
+              <a href="/law/legal-clinics/index" target="_parent" title="Legal Clinics">Legal Clinics</a>
             </li>
             <li>
-              <a href="/entity/open.act?type=page&amp;id=bfa76661c04d744c6ab45b2909ea9b96" target="_parent" title="Apply Now">Apply Now</a>
+              <a href="/law/admission/apply-now" target="_parent" title="Apply Now">Apply Now</a>
             </li>
             <li>
-              <a href="/entity/open.act?type=page&amp;id=c7eb003cc04d744c3d19b2f2e605daba" target="_parent" title="Student Resources">Student Resources</a>
+              <a href="/law/student-resources/index" target="_parent" title="Student Resources">Student Resources</a>
             </li>
             <li>
-              <a href="/entity/open.act?type=page&amp;id=c9fb0d31c04d744c7b41aa25483613cf" target="_parent" title="Career Services &amp; Recruitment">Career Services &amp; Recruitment </a>
+              <a href="/law/careers/index" target="_parent" title="Career Services &amp; Recruitment">Career Services &amp; Recruitment </a>
             </li>
             <li>
-              <a href="/entity/open.act?type=page&amp;id=22db2085c04d744c421e6b1cd294eb14" target="_parent">ABA Disclosures</a>
+              <a href="/law/about/consumer-information/index" target="_parent">ABA Disclosures</a>
             </li>
           </ul>
         </div>
