increased list padding

--- a/app/assets/stylesheets/layout_old/footer.scss
+++ b/app/assets/stylesheets/layout_old/footer.scss
@@ -151,7 +151,7 @@
     }
 
     .link-list {
-      padding: 16px;
+      padding: 16px 48px 16px 16px;;
       list-style-type: none;
 
       li {
