adds padding above footer

--- a/app/assets/stylesheets/layout_old/footer.scss
+++ b/app/assets/stylesheets/layout_old/footer.scss
@@ -5,6 +5,7 @@
   padding-bottom: $base-spacing;
   overflow: auto;
   background-color: #eaeaea;
+  padding-top: 45px;
 
   .inner-container {
     position: relative;
