started omni-nav v2 redesign

--- a/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
@@ -70,9 +70,9 @@ $cu-viewport-xl: 1200px;
 /***************************************************
 * Make room for our nav bar
 ***************************************************/
-html { padding-top: $cu-nav-height !important; }
+html { padding-top: $cu-nav-height; }
+
 html.cu-companion-bar { padding-top: $cu-nav-height + $cu-companion-height !important;}
-html, body { margin:0; padding: 0;}
 
 
 /***************************************************
