--- a/app/views/layouts/omninav.erb
+++ b/app/views/layouts/omninav.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html class="no-js omni-nav-v2" lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -11,6 +11,13 @@
 
   <!-- scripts -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+
+  <script src="//use.typekit.net/eyn5jyy.js" type="text/javascript"></script>
+  <script type="text/javascript">
+  try {
+      Typekit.load();
+  } catch (e) {}
+  </script>
   <%= javascript_include_tag 'master' %>
 
   <!--[if lt IE 7 ]>
