--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -19,9 +19,6 @@
 // Themes for each college
 @import "themes/*";
 
-// Omni-Nav styles
-@import "omni_nav/helpers/mixins-and-variables.scss";
-// @import "helpers/icomoon.scss";
-@import "omni_nav/modules/etc.scss";
-@import "omni_nav/modules/omni-nav.scss";
-@import "omni_nav/modules/off-canvas-nav.scss";
+//Omni-nav styles
+@import "omni_nav/**/*";
+
