--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -56,6 +56,7 @@
       <p>The OmniNav navbar is built and distributed from Cascade Assets.</p>
       <ul>
         <li><%= link_to 'Static Sample', '/omninav' %></li>
+        <li><%= link_to 'Static Sample v2', '/omninav_v2' %></li>
       </ul>
     </div>
   </div>
